RHELPLAN-41563 - splitting an output config file into multiple ones that contains just one action
- In the output role logic, we force to have one option per section.
- Idea how to split one action per config file.
  Background: This is an example of output vars in playbook.
  [0] ----------------------------------------------------------
    logging_outputs:
      - name: files_test0
        type: files
        severity: info
        exclude: authpriv.none;auth.none;cron.none;mail.none
        path: /var/log/messages
      - name: files_test1
        type: files
        facility: authpriv,auth
        path: /var/log/secure
  --------------------------------------------------------------
  In the current (combination) branch, it [0] generates this rule variable [1].
  [1] ----------------------------------------------------------
     [
        {
            "name": "output-files",
            "sections": [
                {
                    "options": "ruleset(name=\"files_test0\") {\n  *.info;authpriv.none;auth.none;cron.none;mail.none /var/log/messages\n}\n### END ###\nruleset(name=\"files_test1\") {\n  authpriv,auth.* /var/log/secure\n}\n"
                }
            ],
            "type": "output"
        }
      ]
  --------------------------------------------------------------
  In this example, the name "output-files" is used in creating an rsyslog config file
  name when the sections of the rule variable is passed to the template module.  So,
  we'd like to convert the value of the rule variable to [2] before passing it to the
  template module.
  [2] ----------------------------------------------------------
    [
      {
          "name": "output-files0",
          "sections": [
              {
                  "options": "ruleset(name=\"files_test0\") {\n  *.info;authpriv.none;auth.none;cron.none;mail.none /var/log/messages\n}\n"
              }
          ],
          "type": "output"
      },
      {
          "name": "output-files1",
          "s

--- a/roles/rsyslog/defaults/main.yml
+++ b/roles/rsyslog/defaults/main.yml
@@ -315,10 +315,12 @@ __rsyslog_conf_send_targets_only:
   - name: 'send-targets-only'
     type: 'output'
     weight: '40'
-    comment: 'Stops logs that should only be sent to defined targets'
-    options: |-
-      if ( strlen($.send_targets_only) > 0 ) then {
-          if ( $.send_targets_only == 'true' ) then {
-              stop
+    sections:
+
+      - comment: 'Stops logs that should only be sent to defined targets'
+        options: |-
+          if ( strlen($.send_targets_only) > 0 ) then {
+              if ( $.send_targets_only == 'true' ) then {
+                  stop
+              }
           }
-      }
