--- a/roles/rsyslog/roles/output_roles/forwards/defaults/main.yml
+++ b/roles/rsyslog/roles/output_roles/forwards/defaults/main.yml
@@ -12,16 +12,21 @@ __rsyslog_forwards_output_rules:
 # Enable log forwarding to another ``rsyslogd`` instance if `rsyslog_output_forwards` variables are defined.
 __rsyslog_conf_forwards_output_rules:
 
-  - name: 'output-forwards'
+  - name: 'output-forwards-0-tls'
     type: 'output'
-    state: '{{ "present" if (rsyslog_output_forwards | d())
+    state: '{{ "present"
+               if (rsyslog_output_forwards | d()) and ("tls" in rsyslog_capabilities)
                else "absent" }}'
     sections:
 
       - comment: 'Forward logs over TLS by default'
         options: '{{ rsyslog_send_over_tls }}'
-        state: '{{ "present" if ("tls" in rsyslog_capabilities)
-                   else "absent" }}'
+
+  - name: 'output-forwards'
+    type: 'output'
+    state: '{{ "present" if (rsyslog_output_forwards | d())
+               else "absent" }}'
+    sections:
 
       - comment: 'Forward logs to specified hosts'
         options: |-
