--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,28 +8,15 @@
 
     - name: Set rsyslog_output_elasticsearch for the omelasticsearch output
       set_fact:
-        rsyslog_output_elasticsearch: "{{ rsyslog_output_elasticsearch | d([]) }} + {{ [ item ] }}"
-      loop: "{{ logging_outputs }}"
-      when:
-        - item.name is defined
-        - item.type | d('') == 'elasticsearch'
+        rsyslog_output_elasticsearch: "{{ logging_outputs | selectattr('name', 'defined') | selectattr('type', 'defined') | selectattr('type', '==', 'elasticsearch') | list }}"
 
     - name: Set rsyslog_output_files for the omfile outputs
       set_fact:
-        rsyslog_output_files: "{{ rsyslog_output_files | d([]) }} + {{ [ item ] }}"
-      loop: "{{ logging_outputs }}"
-      when:
-        - item.name is defined
-        - item.type | d('') == 'files'
+        rsyslog_output_files: "{{ logging_outputs | selectattr('name', 'defined') | selectattr('type', 'defined') | selectattr('type', '==', 'files') | list }}"
 
     - name: Set rsyslog_output_forwards for the omfwd output
       set_fact:
-        rsyslog_output_forwards: "{{ rsyslog_output_forwards | d([]) }} + {{ [ item ] }}"
-      loop: "{{ logging_outputs }}"
-      when:
-        - item.name is defined
-        - item.target is defined
-        - item.type | d('') == 'forwards'
+        rsyslog_output_forwards: "{{ logging_outputs | selectattr('name', 'defined') | selectattr('type', 'defined') | selectattr('type', '==', 'forwards') | list }}"
 
     - name: Set rsyslog_outputs
       set_fact:
