--- a/roles/rsyslog/vars/outputs/files.yml
+++ b/roles/rsyslog/vars/outputs/files.yml
@@ -1,4 +1,10 @@
----
+# Local file output rpm packages
+
+# __rsyslog_files_output_packages
+#
+# List of rpm packages for Files output.
+__rsyslog_files_output_packages: []
+
 # Files output configuration
 # ---------------------------------
 
